--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@tanstack/react-query": "^5.36.0",
     "axios": "^1.6.8",
     "prettier-plugin-tailwindcss": "^0.5.14",
