--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "@tanstack/react-query": "^5.36.0",
     "axios": "^1.6.8",
+    "framer-motion": "^11.2.4",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
